--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-quill": "^2.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
