--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "seed": "node scripts/seedMantras.js"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
